fixing @ spacing

--- a/css/2023-style.css
+++ b/css/2023-style.css
@@ -142,6 +142,7 @@ header{
 display: flex;
 flex-direction: row;
 align-items: baseline;
+gap: 8px;
 }
 
 /* typography */
